refactor(result): ResultCalculationService 코드 정리 및 가독성 개선
- 단일 결과 계산 로직 분리
- 등수·상금 계산 흐름 정리
- 통계 조회 로직 구조 개선